Mobile per Design (Width: 735px) Finished

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div class="header-ratings">
-            <div class="rating">
+            <div class="rating bg-light">
               <span class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -45,7 +45,7 @@
               </span>
               <p>Rated 5 Stars in Reviews</p>
             </div>
-            <div class="rating">
+            <div class="rating bg-light">
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -55,7 +55,7 @@
               </div>
               <p>Rated 5 Stars in Report Guru</p>
             </div>
-            <div class="rating">
+            <div class="rating bg-light">
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -72,7 +72,7 @@
     <main id="cards">
       <div class="container">
         <div class="flex-cards">
-          <div class="card">
+          <div class="card bg-dark">
             <div class="card-content">
               <img src="./images/image-colton.jpg" alt="" />
               <h4>Colton Smith</h4>
@@ -86,7 +86,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card bg-dark">
             <div class="card-content">
               <img src="./images/image-irene.jpg" alt="" />
               <h4>Irene Roberts</h4>
@@ -99,7 +99,7 @@
               </p>
             </div>
           </div>
-          <div class="card">
+          <div class="card bg-dark">
             <div class="card-content">
               <img src="./images/image-anne.jpg" alt="" />
               <h4>Anne Wallace</h4>
